samples/_failures_safe/1761271954_76ee9e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1614d759.c: In function ‘main’:
./samples/SAFE/__tmp_1614d759.c:150:5: error: expected declaration or statement at end of input
  150 |     destroy_matrix(&b);
      |     ^~~~~~~~~~~~~~
